Build files has been simplified. Fix #181