@@ -1,12 +1,9 @@
 plugins {
   `java-library`
-  kotlin("jvm") version "1.2.51"
+  kotlin("jvm")
 }
 
 configure<JavaPluginConvention> {
-  sourceCompatibility = JavaVersion.VERSION_1_10
-  targetCompatibility = JavaVersion.VERSION_1_10
-
   val sourceSet = sourceSets["main"]
   sourceSet.java.srcDir("gen")
   sourceSet.java.srcDir("${rootProject.rootDir}/plugins/InspectionGadgets/src/main/java")
@@ -15,16 +12,6 @@ configure<JavaPluginConvention> {
   sourceSet.resources.srcDir("${rootProject.rootDir}/plugins/IntentionPowerPak/src/main/resources")
   sourceSet.java.srcDir("${rootProject.rootDir}/plugins/generate-tostring/src/main/java")
   sourceSet.resources.srcDir("${rootProject.rootDir}/plugins/generate-tostring/src/main/resources")
-}
-
-tasks {
-  "compileJava"(JavaCompile::class) {
-    options.compilerArgs.addAll(listOf("--add-exports", "jdk.compiler/com.sun.tools.doclint=ALL-UNNAMED"))
-  }
-
-  "compileKotlin"(org.jetbrains.kotlin.gradle.tasks.KotlinCompile::class) {
-    kotlinOptions.jvmTarget = "1.8"
-  }
 }
 
 dependencies {
@@ -62,7 +49,7 @@ dependencies {
   implementation(Dependencies.Velocity)
   implementation(Dependencies.gson)
   implementation(Dependencies.`netty-codec-http`)
-  implementation("javax.xml.bind:jaxb-api:2.3.0")
+  implementation(Dependencies.`jaxb-api`)
   implementation(Dependencies.activation)
-  implementation(":wadl-core:")
+  implementation(Dependencies.`wadl-core`)
 }
